<resources>
    <string name="app_name">Living</string>
    <string name="living">LIVING</string>
    <string name="nav_item_record">记录</string>
    <string name="nav_item_ground">广场</string>
    <string name="nav_item_message">消息</string>
    <string name="nav_item_user">我的</string>
    <string name="nav_subitem_info">信息</string>
    <string name="record_camera_but">我最懂你</string>
    <string name="record_pub_switch">公开</string>
    <string name="record_pub_button">发布</string>
    <string name="record_emo_text">我的心情</string>
    <string name="record_rbut_happy">开心</string>
    <string name="rbut_anger">愤怒</string>
    <string name="rbut_sad">忧伤</string>
    <string name="rbut_calm">平静</string>
    <string name="record_p_text">心情强度</string>
    <string name="record_edit_text">记录</string>
    <string name="camera_dialog_title">心情识别</string>
    <string name="camera_dialog_item1">拍摄</string>
    <string name="camera_dialog_item2">相册</string>
    <string name="ground_but_all">全部</string>
    <string name="ground_but_happy">开心</string>
    <string name="ground_but_anger">愤怒</string>
    <string name="ground_but_sad">伤心</string>
    <string name="ground_but_calm">平静</string>
    <string name="ground_more_comment_but">查看更多评论......</string>
    <string name="ground_respond_text">" 回复 "</string>
    <string name="title_activity_settings">Settings</string>
    <string name="emotion_key">3df039d064bc49f49a81c02d50c3c861</string>
    <string name="emotion_endpoint">https://westcentralus.api.cognitive.microsoft.com/face/v1.0</string>
    <string name="emotion_prog_title">识别你的心情</string>
    <string name="emotion_detect_fail">未能识别出您的心情，请重试</string>
    <string name="emotion_type">心情类型: </string>
    <string name="emotion_value">心情强度: </string>
    <string name="emotion_dia_title">心情识别结果</string>
    <string name="emotion_detecing">正在识别.....</string>
    <string name="send">发送</string>
    <string name="Loginig">正在登录</string>
    <string name="login_failed">账号或密码错误！</string>
    <string name="logout_failed">登出失败！</string>
    <string name="pthone">手机</string>
    <string name="passwd">密码</string>
    <string name="passwd2">确认密码</string>
    <string name="pwd_check_err">两次密码不一致</string>
    <string name="phone_check_err">手机号不正确</string>
    <string name="register_fail">注册失败，手机号已被注册过了</string>
    <string name="pub_record_fail">心情发布失败，请检查您的网络</string>
    <string name="pub_record_empty">在随笔处写点感想吧</string>
    <string name="get_record_failed">无法获得心情记录，请检查您的网络</string>
    <string name="postlike_failed">无法点赞，请检查您的网络</string>
    <string name="mesg_like">" 点赞了你的心情"</string>
    <string name="mesg_resp_emotion">" 评论了你的心情: "</string>
    <string name="mesg_resp_comment"> 回复了你的评论: </string>
    <string name="mesg_pull_failed"> 获得信息失败，请检查您的网络</string>
    <string name="myground">我的心情广场</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="mobile">手机</string>
    <string name="password">密码</string>
    <string name="intro">记录，寻找心情共鸣</string>
    <string name="pls_input_pwd">请输入密码(6—14字符)</string>
    <string name="pls_input_phonenum">在这里输入手机号</string>

    <string name="login_button">登录</string>
    <string name="reg_button">切换到注册页面</string>

    <string name="nickname">昵称</string>
    <string name="random_try">随机一个?</string>
    <string name="confirm_button">完成</string>
    <string name="choose_a_profile">选择头像</string>
</resources>
