<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/emoGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbut_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/radio_all_bg"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/ground_but_all"
            android:textAlignment="center"
            android:textColor="@drawable/radio_text_color"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbut_happy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/radio_happy_bg"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/ground_but_happy"
            android:textAlignment="center"
            android:textColor="@drawable/radio_text_color"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbut_anger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            android:button="@null"
            android:drawableTop="@drawable/radio_anger_bg"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/ground_but_anger"
            android:textAlignment="center"
            android:textColor="@drawable/radio_text_color"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbut_sad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            android:button="@null"
            android:drawableTop="@drawable/radio_sad_bg"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/ground_but_sad"
            android:textAlignment="center"
            android:textColor="@drawable/radio_text_color"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbut_calm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:button="@null"
            android:drawableTop="@drawable/radio_calm_bg"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/ground_but_calm"
            android:textAlignment="center"
            android:textColor="@drawable/radio_text_color"
            android:textSize="20sp" />
    </RadioGroup>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/id_swipe_ly"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>