<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    android:scrollbarAlwaysDrawVerticalTrack="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ProgressBar
            android:id="@+id/pubProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <ImageButton
                android:id="@+id/self_pub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_margin="5dp"
                android:layout_toLeftOf="@+id/pub_pub"
                android:background="@android:color/transparent"
                android:src="@drawable/pub_to_self_button" />

            <ImageButton
                android:id="@+id/pub_pub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:src="@drawable/pub_to_pub_button" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/camera_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/record_camera_but"
            android:scaleType="fitCenter"
            android:src="@drawable/camera" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0"
            android:text="@string/record_emo_text"
            android:textSize="15dp" />

        <RadioGroup
            android:id="@+id/emoGroup"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="center_horizontal|top"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbut_happy"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/radio_happy_bg"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:text="@string/ground_but_happy"
                android:textAlignment="center"
                android:textColor="@drawable/radio_text_color"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbut_anger"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:button="@null"
                android:drawableTop="@drawable/radio_anger_bg"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:text="@string/ground_but_anger"
                android:textAlignment="center"
                android:textColor="@drawable/radio_text_color"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbut_sad"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:button="@null"
                android:drawableTop="@drawable/radio_sad_bg"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:text="@string/ground_but_sad"
                android:textAlignment="center"
                android:textColor="@drawable/radio_text_color"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbut_calm"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:button="@null"
                android:drawableTop="@drawable/radio_calm_bg"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:text="@string/ground_but_calm"
                android:textAlignment="center"
                android:textColor="@drawable/radio_text_color"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/degreeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0"
            android:text="@string/emotion_value"
            android:textSize="15dp" />

        <SeekBar
            android:id="@+id/degreeBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:max="100"
            android:progress="50"
            android:progressDrawable="@drawable/seekbar_bg"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:thumb="@drawable/seekbar_thumb"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="5dp"
            android:text="@string/nav_item_record"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/pub_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="#eeeeee"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="记录这一刻"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="140"
            android:minHeight="100dp"
            android:scrollHorizontally="false" />
    </LinearLayout>
</ScrollView>