<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/Living"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="72dp"
            android:src="@drawable/living"
            app:layout_constraintBottom_toTopOf="@+id/introduction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/Living"
            android:layout_below="@id/Living"
            android:text="@string/intro"
            android:textSize="@dimen/intro_text_siez" />
    </RelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginLeftPercent="@dimen/margin_left_percent"
            android:padding="5dp"
            android:text="@string/mobile"
            android:textSize="@dimen/index_text_size" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/phone_tv"
            android:background="@drawable/edit_bg"
            android:clickable="true"
            android:focusable="true"
            android:ems="8"
            android:enabled="true"
            android:padding="5dp"
            android:textSize="@dimen/input_text_size" />
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/passwd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginLeftPercent="@dimen/margin_left_percent"
            android:padding="5dp"
            android:text="@string/passwd"
            android:textSize="@dimen/index_text_size" />

        <EditText
            android:id="@+id/passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/passwd_tv"
            android:background="@drawable/edit_bg"
            android:clickable="true"
            android:focusable="true"
            android:ems="8"
            android:enabled="true"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="@dimen/input_text_size" />
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/passwd2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_marginLeftPercent="@dimen/margin_left_percent"
            android:text="@string/passwd2"
            android:textSize="@dimen/index_text_size" />

        <EditText
            android:id="@+id/passwd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/passwd2_tv"
            android:layout_gravity="center"
            android:background="@drawable/edit_bg"
            android:clickable="true"
            android:focusable="true"
            android:ems="8"
            android:enabled="true"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="@dimen/input_text_size" />
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nickname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_marginLeftPercent="@dimen/margin_left_percent"
            android:text="@string/nickname"
            android:textSize="@dimen/index_text_size" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/nickname_tv"
            android:background="@drawable/edit_bg"
            android:clickable="true"
            android:focusable="true"
            android:ems="8"
            android:enabled="true"
            android:hint="@string/random_try"
            android:padding="5dp"
            android:textSize="@dimen/input_text_size" />

        <ImageButton
            android:id="@+id/dice_button"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:scaleType="fitStart"
            android:background="@android:color/transparent"
            android:layout_toEndOf="@+id/nickname"
            android:src="@drawable/dice"/>
    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_marginLeftPercent="@dimen/margin_left_percent"
            android:text="@string/choose_a_profile"
            android:textSize="@dimen/index_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.percent.PercentRelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioGroup
            android:id="@+id/choose_profile_RG"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:checkedButton="@+id/b0"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/b0"
                android:layout_width="@dimen/profile_square_size"
                android:layout_height="@dimen/profile_square_size"
                android:background="@drawable/profile0" />

            <RadioButton
                android:id="@+id/b1"
                android:layout_width="@dimen/profile_square_size"
                android:layout_height="@dimen/profile_square_size"
                android:background="@drawable/profile1" />

            <RadioButton
                android:id="@+id/b2"
                android:layout_width="@dimen/profile_square_size"
                android:layout_height="@dimen/profile_square_size"
                android:background="@drawable/profile2" />
        </RadioGroup>
    </LinearLayout>


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_button"
        android:paddingBottom="@dimen/button_padding_UD"
        android:paddingEnd="@dimen/button_padding_LR"
        android:paddingStart="@dimen/button_padding_LR"
        android:paddingTop="@dimen/button_padding_UD"
        android:text="@string/confirm_button"
        android:textSize="@dimen/button_text_size" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>